src/objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Account type of the account for which pricebook will be used</description>
        <label>Account Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Business type for which pricebook will be used</description>
        <label>Business Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country for which pricebook will be used</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <description>Partner for which pricebook will be used</description>
        <label>Partner Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <description>VAT charge is based on the country the customer is in</description>
        <label>VAT</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Price_Books</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Price Books</label>
    </listViews>
    <sharingModel>ReadSelect</sharingModel>
    <validationRules>
        <fullName>Restrict_Edit_of_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
ISCHANGED( CurrencyIsoCode ),
ISCHANGED( Account_Type__c ),
ISCHANGED( Country__c ),
ISCHANGED( Partner_Id__c )
)</errorConditionFormula>
        <errorMessage>Only Active and Name field can be edited</errorMessage>
    </validationRules>
</CustomObject>